ylcomputing.com (archived on 2009-06-16)
{
  "alexa_rank": 272437,
  "analysis_subcorpus": true,
  "categories": "entertainment;mediasharing",
  "char_count": 5583,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.71,
  "homepage_snapshot_redirected_domain": "ylcomputing.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090327144710id_/http://www.ylcomputing.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090327144710id_/http%3A//ylcomputing.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ylcomputing.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616202450id_/http%3A//www.ylcomputing.com/content/view/4/7",
  "policy_title": "YL Software - Privacy Policy",
  "policy_url": "ylcomputing.com/content/view/4/7",
  "sha1": "04ed49731799dcfa380e646a236444b401250ee4",
  "simhash": 17032540452194660827,
  "simhash_updated": false,
  "site_hostname": "ylcomputing.com",
  "site_url": "http://ylcomputing.com",
  "smog": 13.08,
  "strict_updated": false,
  "timestamp": "20090616202450",
  "word_count": 885,
  "year": 2009
}

--- a/y/yl/ylc/ylcomputing.com.html
+++ b/y/yl/ylc/ylcomputing.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ylcomputing.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216085137id_/http%3A//www.ylcomputing.com/content/view/4/7) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ylcomputing.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616202450id_/http%3A//www.ylcomputing.com/content/view/4/7) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -131,50 +131,25 @@ if (window.attachEvent) window.attachEvent("onload", navHover);
 			<div>
 				<div>
 					<div>
-						<h3>Newsletter</h3>	<script type="text/javascript" language="Javascript"><!--
-	function changeTask() {
-		var name = document.lettermanMod.subscriber_name.value;
-		var email;
-		var max_length = 15;
-		var filter=/^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i
-		
-		if (filter.test(document.lettermanMod.email.value)) {
-			email = document.lettermanMod.email.value;
-			var a = true;
-		} else {
-			alert("Please enter a valid email address.");
-			var a = true; return false;
-		}
-		try {
-					if(document.lettermanMod.subscriber_name.length < 1) {
-				alert("Please enter a Subscriber Name. Thanks.");
-				return false;
-			} 
-					}
-		catch(e) {}
-		return true;
-	} // -->
-	</script>
-	<p>Keep up-to-date with the latest news and bargains with our free newsletter</p>	<form method="post" action="http://www.ylcomputing.com/index.php?option=com_letterman" name="lettermanMod"> 
-	<p>
-	         <input type="text" id="subscriber_name" style="font-size:smaller;" name="subscriber_name" class="inputbox" value=""><br>
-         <span class="smallgrey"><label for="subscriber_name">Name</label></span><br>
-		<input type="text" id="lm_email" name="email" style="font-size:smaller;" class="inputbox" value=""><br>
-	<span class="smallgrey"><label for="lm_email">E-mail</label></span>
-	</p>        
-	<p>
-			   <input name="task" type="radio" class="inputbox" id="lm_subscribe" value="subscribe" checked="checked">
-			<label for="lm_subscribe">Subscribe</label><br>
-			<input name="task" type="radio" class="inputbox" id="lm_unsubscribe" value="unsubscribe">
-			<label for="lm_unsubscribe">Unsubscribe</label>
-			<br>
-			<input type="submit" class="button" value="Go!" onclick="return changeTask();">
-		
-			</p>
-	 <input type="hidden" name="Itemid" value="7">
-	 		<input type="hidden" name="6191636fee07d550f9aa236d257b19f0" value="1">
-	 </form>	
-					</div>
+						<h3>Newsletter</h3><!-- BEGIN: Constant Contact Basic Opt-in Email List Form -->
+<div align="center">
+<table style="border-right: #ffffff 2px solid; border-top: #ffffff 2px solid; border-left: #ffffff 2px solid; border-bottom: #ffffff 2px solid" cellspacing="0" cellpadding="3" width="128" bgcolor="#ffffff" border="0">
+    <tbody>
+        <tr>
+            <td style="font-weight: bold; font-size: 12px; color: #006699; font-family: Arial" align="center">Keep up-to-date with the latest product news with our free newsletter</td>
+        </tr>
+        <tr>
+            <td style="border-top: #ffffff 2px solid" align="center">
+            <form style="margin-bottom: 2px" action="http://visitor.constantcontact.com/d.jsp" method="post" target="_blank" name="ccoptin">
+                <input type="hidden" name="m" value="1102600607650"> <input type="hidden" name="p" value="oi"> Your <font style="font-weight: normal; font-size: 12px; color: #000000; font-family: Arial">Email:</font> <input style="border-right: #999999 1px solid; border-top: #999999 1px solid; font-size: 10pt; border-left: #999999 1px solid; border-bottom: #999999 1px solid" size="17" name="ea" type="text"> <br>
+                <input class="submit" style="font-size: 10pt; font-family: Verdana,Geneva,Arial,Helvetica,sans-serif" type="submit" name="go" value="Join">
+            </form>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</div>
+<!-- END: Constant Contact Basic Opt-in Email List Form -->					</div>
 				</div>
 			</div>
 		</div>
@@ -208,6 +183,35 @@ google_ad_channel = "";
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>					</div>
+				</div>
+			</div>
+		</div>
+				<div class="moduleBDR">
+			<div>
+				<div>
+					<div>
+						<h3>Syndicate</h3><div class="syndicateBDR">
+			<div align="center">
+			<a href="http://www.ylcomputing.com/component/option,com_rss/feed,RSS0.91/no_html,1/">
+				<img src="http://www.ylcomputing.com/images/M_images/rss091.gif" alt="RSS 0.91" name="RSS091" align="middle" border="0"></a>
+		</div>
+				<div align="center">
+			<a href="http://www.ylcomputing.com/component/option,com_rss/feed,RSS1.0/no_html,1/">
+				<img src="http://www.ylcomputing.com/images/M_images/rss10.gif" alt="RSS 1.0" name="RSS10" align="middle" border="0"></a>
+		</div>
+				<div align="center">
+			<a href="http://www.ylcomputing.com/component/option,com_rss/feed,RSS2.0/no_html,1/">
+				<img src="http://www.ylcomputing.com/images/M_images/rss20.gif" alt="RSS 2.0" name="RSS20" align="middle" border="0"></a>
+		</div>
+				<div align="center">
+			<a href="http://www.ylcomputing.com/component/option,com_rss/feed,ATOM0.3/no_html,1/">
+				<img src="http://www.ylcomputing.com/images/M_images/atom03.gif" alt="ATOM 0.3" name="ATOM03" align="middle" border="0"></a>
+		</div>
+				<div align="center">
+			<a href="http://www.ylcomputing.com/component/option,com_rss/feed,OPML/no_html,1/">
+				<img src="http://www.ylcomputing.com/images/M_images/opml.png" alt="OPML" name="OPML" align="middle" border="0"></a>
+		</div>
+		</div>					</div>
 				</div>
 			</div>
 		</div>
@@ -249,7 +253,7 @@ urchinTracker();
 <a href="http://www.ylcomputing.com/content/view/2/5/" title="About Us">About Us</a> | 
 <a href="http://www.ylcomputing.com/content/view/234" title="Useful Internet Links">Links</a>
 <br>
-<a href="http://www.ylcomputing.com" title="YL Computing, Inc">Copyright © 2002-2008 YL Computing, Inc. All rights Reserved.</a>
+<a href="http://www.ylcomputing.com" title="YL Computing, Inc">Copyright © 2002-2009 YL Computing, Inc. All rights Reserved.</a>
 </div>
 <!--?php include($mosConfig_absolute_path."/templates/" . $mainframe->getTemplate() . "/js/template.css.php"); ?-->
 
