travelguru.com (archived on 2009-06-16)
{
  "alexa_rank": 19210,
  "analysis_subcorpus": true,
  "categories": "entertainment;travel",
  "char_count": 14355,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.59,
  "homepage_snapshot_redirected_domain": "travelguru.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090401030420id_/http://www.travelguru.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090401030420id_/http%3A//travelguru.com",
  "interval": "2009_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "travelguru.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616202835id_/http%3A//www.travelguru.com/about/privacy.shtml",
  "policy_title": "Travelguru - Privacy Policy",
  "policy_url": "travelguru.com/about/privacy.shtml",
  "sha1": "a207e5e5821f0cda59c909289f4616cfa8904118",
  "simhash": 4280660599465841175,
  "simhash_updated": true,
  "site_hostname": "travelguru.com",
  "site_url": "http://travelguru.com",
  "smog": 14.6,
  "strict_updated": true,
  "timestamp": "20090616202835",
  "word_count": 2182,
  "year": 2009
}

--- a/t/tr/tra/travelguru.com.html
+++ b/t/tr/tra/travelguru.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the travelguru.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217044135id_/http%3A//www.travelguru.com/about/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the travelguru.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616202835id_/http%3A//www.travelguru.com/about/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -121,22 +121,22 @@ var st = setTimeout("set_this()",50)
 <table width="773" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr> 
     <td width="24%" colspan="2" valign="top" height="70"><a href="http://www.travelguru.com/"><img src="/images/logo.gif" border="0" alt="Hotels in India, Hotel in India"></a></td>
-    <td width="76%" colspan="3" valign="middle"><table width="442" border="0" align="right" cellpadding="0" cellspacing="0">
+    <td width="76%" colspan="3" valign="middle"><table width="270" border="0" align="right" cellpadding="0" cellspacing="0">
       <tbody><tr>
-        <td height="5" colspan="4"></td>
+        <td height="5" colspan="2"></td>
       </tr>
       <tr>
-        <td width="231" rowspan="2" align="right" valign="top"><img src="/images/call-us.gif"></td>
-        <td width="211" height="25" align="right" valign="middle" class="number-1">+91 - 22 - 4030 4878</td>
+        <td width="85" rowspan="2" valign="top"><img src="/images/call-us.gif"></td>
+        <td width="195" align="right" valign="middle" class="number-1">022 4275 4878</td>
       </tr>
       <tr>
-        <td align="right" valign="top"><font face="arial" size="1" color="#343434">standard charges apply</font></td>
+        <td align="right" valign="top" class="arial-10">standard charges apply</td>
       </tr>
       <tr>
-        <td height="25" colspan="4" align="right"></td>
+        <td height="25" colspan="2">&nbsp;</td>
       </tr>
     </tbody></table></td>
-  </tr>
+</tr>
   <tr> 
     <td colspan="5"><table width="50%" border="0" align="left" cellpadding="0" cellspacing="0">
       <tbody><tr>
@@ -268,7 +268,7 @@ If you choose to become a  registered member of Travelguru.com Site, you must pr
                   </tr>
                   <tr>
                     <td>&nbsp;</td>
-                    <td class="bodyText">When you reserve or purchase travel services  through Travelguru, we must provide some of your personal information to the  airline, hotel, car-rental agency, travel agency or other involved third party  to enable the successful fulfillment of your travel arrangements. However, we  do not sell or rent individual customer names or other personal information to  third parties.<br>
+                    <td class="bodyText">When you reserve or purchase travel services  through Travelguru, we must provide some of your personal information to the  airline, hotel, car-rental agency, travel agency or other involved third party  to enable the successful fulfillment of your travel arrangements.<br>
                       <br>
                       From time to time, we may 
                     disclose your Personal Information as follows: <ul>
@@ -294,16 +294,12 @@ If you choose to become a  registered member of Travelguru.com Site, you must pr
                         Travelguru, and with respect to that information, to act 
                         in a manner consistent with the relevant principles articulated 
                         in this Policy.</li>
-                      <li>We may collaborate with other companies 
-                        to offer you additional Products or Services, for example, 
-                        through sweepstakes, raffles, and promotions. We will 
-                        share Personal Information that is necessary for these 
-                        other companies to provide the products or services that 
-                        you have requested.</li>
+                      <li>Occasionally, we may collaborate with reputable, carefully-screened partners or other companies for the purpose of providing you with additional Products, Services, Information or Promotional opportunities. We will share your Personal Information that is necessary for these other companies to contact you for providing their products or services. We make no warranty, express, implied, or otherwise as to the privacy and data security practices of these other companies referenced in this paragraph.</li>
                     </ul>This policy will not cover the use of 
                     your Personal Information by these other companies. We encourage 
                     you to read a company's privacy policy before requesting any 
-                    of its products or services. <ul>
+                    of its products or services. 
+                    <ul>
                       <li>We may also disclose your information 
                         to our affiliates and non-affiliated business partners 
                         for their use both on our behalf and for their own business 
