--- a/h/he/hen/hentaiboss.com.html
+++ b/h/he/hen/hentaiboss.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hentaiboss.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216164739id_/http%3A//hentaiboss.com/external.php%3Fpage%3Dprivacy%26ref%3D%26nats%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hentaiboss.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616203841id_/http%3A//www.hentaiboss.com/external.php%3Fpage%3Dprivacy%26ref%3D%26nats%3D) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <link rel="SHORTCUT ICON" href="images/favicon.ico">
