--- a/r/ri/rib/ribbit.com.html
+++ b/r/ri/rib/ribbit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ribbit.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217075244id_/http%3A//www.ribbit.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ribbit.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616203900id_/http%3A//www.ribbit.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -37,39 +37,69 @@ pageTracker._trackPageview();
 	
 <h1 style="font-size: 1.8em; padding-top: 10px; padding-bottom: 5px;">Privacy Policy</h1>
 <p>
-Because we gather certain types of information about our users, we feel you should fully understand the terms and conditions surrounding the capture and use of that information. The information we collect is not sold, lent, rented, or otherwise shared with other organizations for any purpose. This privacy statement discloses what information we gather and how we use it. 
-</p>
-<p></p><h3>What kinds of voluntary information do you gather?</h3>
-Our site and email communications may contain links to subscribe, or opt in, and receive special information and publications. For example, we may sponsor an email newsletter, and you may subscribe to this email and other communications from Ribbit. Any communication we send will contain an option to opt out of future communications.
-<p></p>
+Because we gather certain types of information about our customer and developers, we feel you should fully understand what we capture and how we use that information. This privacy statement discloses what information we gather and how we use it. 
+</p>	
 <p>
-Ribbit may occasionally conduct user surveys to better target our content to our audience. We sometimes share the aggregated demographic information in these surveys with our sponsors, advertisers, and partners. We never share any of this information about specific individuals with any third party.
-</p>
+</p><h3>Who are we?</h3>
+Ribbit Corporation [is a new type of phone company] headquartered in Mountain View, California. Ribbit is a wholly owned subsidiary of BT [Group] plc. For more information about us please visit <a href="http://www.ribbit.com/about/">http://www.ribbit.com/about/</a>.
+<p></p>	
 <p>
-</p><h3>What other types of information do you gather?</h3>
-Information Ribbit gathers through aggregated tracking information is derived mainly by tallying page views throughout our sites. This information allows us to better tailor our content to readers' needs. Under no circumstances does Ribbit divulge any information about an individual user to a third party.
-<p></p>
+</p><h3>What kinds of voluntary information do we gather?</h3>
+Our site and email communications may contain links to subscribe, or opt in, and receive special information and publications. For example, we may sponsor an email newsletter, and you may subscribe to this email and other communications from Ribbit. Any communication we send will contain an option to opt out of future communications. 
+<br><br>
+Ribbit may occasionally conduct user surveys to better target our content to our audience. We sometimes share the aggregated demographic information in these surveys with our sponsors, advertisers, and partners. We never share any of this information about specific individuals with any third party. 
+<p></p>	
 <p>
-Ribbit tracks user traffic patterns throughout our sites. However, we do not correlate this information with data about individual users. does break down overall usage statistics according to a user's domain name, browser type, and MIME type by reading this information from the browser string (information contained in every user's browser).
-</p>
+</p><h3>What other types of information do we gather?</h3>
+Information Ribbit gathers through aggregated tracking information is derived mainly by tallying page views throughout our sites. This information allows us to better tailor our content to readers' needs. Under no circumstances does Ribbit divulge any information about an individual user to a third party. 
+<br><br>
+Ribbit tracks user traffic patterns throughout our sites. However, we do not correlate this information with data about individual users. Ribbit does break down overall usage statistics according to a user's domain name, browser type, and MIME type by reading this information from the browser string (information contained in every user's browser). 
+<br><br>
+Ribbit sometimes tracks and catalogs the search terms users enter in our Search function, but this tracking is never associated with individual users. We use tracking information to determine which areas of our sites users like and don't like based on traffic to those areas. We do not track what individual users read, but rather how well each page performs overall. This helps us continue to build a better service for you. 
+<p></p>	
 <p>
-Ribbit sometimes tracks and catalogs the search terms users enter in our Search function, but this tracking is never associated with individual users. We use tracking information to determine which areas of our sites users like and don't like based on traffic to those areas. We do not track what individual users read, but rather how well each page performs overall. This helps us continue to build a better service for you.
-</p>
+</p><h3>Do we share your information with anyone else?</h3>
+As a normal part of our business we sometimes use other companies to provide services to you or to provide services to us. Because of this, we may need to share your information with them. When we do so, we require these companies to deal with your data only in the way we tell them to and to behave in line with relevant data privacy laws.
+<br><br>
+We may also share your information with other companies so that they can contact you with details of other products or services you may be interested in. We will only do this if you have agreed to this and where the companies agree to use your information for that purpose only. If you have agreed to receive information about products and services from another company and later decide not to you will need to contact that company yourself to let them know. You can of course ask us not to continue to provide your information to any more companies in future.
+We may provide information, in response to properly made requests, for the purposes of the prevention and detection of crime, and the apprehension or prosecution of offenders. We may also provide information for the purpose of safeguarding national security. In either case we do so in accordance with the relevant data privacy laws. We also provide information when required to do so by law or in response to properly made demands, under powers contained in legislation.
+<br><br>
+If there is a change (or prospective change) in our ownership or any of our assets, we may disclose personal information to the new (or prospective) owner. If we do so, we will require them to keep it confidential. 
+If you believe the personal information we hold on you is incorrect please <a href="http://www.ribbit.com/contact">contact us</a>.
+<p></p>	
 <p>
-</p><h3>What are "cookies" and how do you use them?</h3>
-We may place a text file called a "cookie" in the browser files of your computer. The cookie itself does not contain personal information, although it will enable us to relate your use of this site to information that you have specifically and knowingly provided. The only personal information a cookie can contain is information you supply yourself. A cookie can't read data from your hard disk or read cookie files created by other sites. Ribbit may use cookies to track user traffic patterns (as described above).
-<p></p>
+</p><h3>For how long do we keep personal information?</h3>
+Unless there is a specific legal requirement for us to keep the information, we will keep it for no longer than is needed for the purposes for which the data was collected or for which it is to be further processed. 
+<p></p>	
 <p>
-</p><h3>I'd rather not be cookied. Can I turn them off?</h3>
+</p><h3>How do we protect your data when it is transferred out of the country you are based in?</h3>
+As part of our business and because our customers are based around the world, we may have to transfer data outside the country you are based in. When we do so we make sure that your data will be given the protection required by the relevant data privacy laws. By [signing up with us or using any of our services] you agree that your information may be transferred to our offices and those of BT, our business partners and suppliers in other countries.
+<p></p>	
+<p>
+</p><h3>How do we protect your information?</h3>
+The security of your information is important to us. We take appropriate organisational and technical security measures to protect your data against unauthorised disclosure or processing. We use a secure server to store the information you give us when you register or make an order (including your credit card details and your password). Any personal data you send us on-line is securely encrypted.
+<br><br>
+Please note that your billing account number is a sensitive piece of information, which can be used with your telephone number to find out information about your use of Ribbit's Services. Please be sure to keep this information safe, and do not share it with others. For access to information such as itemised billing and some business account and ordering services, extra proof of identity and authorisation may be needed. 
+<p></p>	
+<p>
+</p><h3>What are "cookies" and how do we use them?</h3>
+We may place a text file called a "cookie" in the browser files of your computer. The cookie itself does not contain personal information, although it will enable us to relate your use of this site to information that you have specifically and knowingly provided. The only personal information a cookie can contain is information you supply yourself. A cookie can't read data from your hard disk or read cookie files created by other sites. Ribbit may use cookies to track user traffic patterns (as described above). 
+<p></p>	
+<p>
+</p><h3>What if you would rather not be cookied?</h3>
 You can refuse cookies by turning them off in your browser. If you've set your browser to warn you before accepting cookies, you will receive the warning message with each cookie. You do not need to have cookies turned on to use this site. 
-<p></p>
+<p></p>	
 <p>
-</p><h3>What is your policy on underage users?</h3>
-Consistent with the Federal Children's Online Privacy Protection Act of 1998 (COPPA), we will never knowingly request personally identifiable information from anyone under the age of 13 without requesting parental consent.
-<p></p>
+</p><h3>What is our policy on underage users?</h3>
+Consistent with the Federal Children's Online Privacy Protection Act of 1998 (COPPA), we will never knowingly request personally identifiable information from anyone under the age of 13 without requesting parental consent. 
+<p></p>	
 <p>
-</p><h3>What if I need to contact you?</h3>
-If you wish to correct any inaccuracies in our record of your contact information, or if you do not want to receive email from us in the future, please let us know by using the "unsubscribe" option on our communications to send us an email. Or, if you feel that this site is not following its stated information policy, please <a href="http://www.ribbit.com/contact">contact us</a>.
+</p><h3>What if you need to contact us?</h3>
+If you wish to correct any inaccuracies in our record of your contact information, or if you do not want to receive email from us in the future, please let us know by using the "unsubscribe" option on our communications to send us an email. Or, if you feel that this site is not following its stated information policy, please <a href="http://www.ribbit.com/contact">contact us</a>. 
+<p></p>	
+<p>
+</p><h3>How do you find out about changes to our privacy policy?</h3>
+We may change our privacy policy from time to time. New policies will be published on our web sites. 
 	<p></p>	
 		
 	</div>
@@ -91,7 +121,7 @@ If you wish to correct any inaccuracies in our record of your contact informatio
 	<li><a href="about/">About</a></li>
 	<li><a href="contact/">Contact Us</a></li>
 	<li><a href="careers/">Careers</a></li>
-	<li><a href="legal/">Legal</a></li>
+	<li><a href="http://docs.ribbit.com/end-user-license-agreement">Legal</a></li>
 	<li><a href="privacy/">Privacy</a></li>
 </ul>
 
@@ -116,12 +146,13 @@ If you wish to correct any inaccuracies in our record of your contact informatio
 	<li><a href="blog/">Corporate Blog</a></li>
 	<li><a href="http://developer.ribbit.com/blog/">Developer Blog</a></li>
 	<li><a href="http://ideawall.ribbit.com">Idea Wall</a></li>
+	<li><a href="http://video.ribbit.com">Ribbit Video</a></li>	
 </ul>
 
 <ul>
 	<li class="title">Press</li>
 	<li><a href="news/">News</a></li>
-	<li><a href="mediakit/">Media Kit</a></li>
+	<li><a href="http://marketing.ribbit.com/mediakit">Media Kit</a></li>
 </ul>
 
 <ul>
