--- a/t/tr/tri/tricklife.com.html
+++ b/t/tr/tri/tricklife.com.html
@@ -1,7 +1,9 @@
-<!--The following is the downloaded HTML source of the tricklife.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217041043id_/http%3A//www.tricklife.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tricklife.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616203923id_/http%3A//www.tricklife.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
+<script type="text/javascript" src="http://www.burristech.com/popunder.php?pub_id=13&amp;exclude_countries=">
+</script>
  <title>TrickLife.com</title>
  <link rel="stylesheet" type="text/css" href="http://www.tricklife.com/css/style.css">
 
@@ -186,6 +188,7 @@ function MM_preloadImages() { //v3.0
    <table width="759" cellpadding="0" cellspacing="0" border="0">
     <tbody><tr>
      <td width="759">
+     <strong><a href="http://www.koolcash.com" title="Earn Prizes">Earn Prizes</a></strong>
 <a href="http://www.tricklife.com/" class="menutext">Newest Videos</a><img src="images/spacer.gif" width="10" height="1" alt="">
 <a href="http://www.tricklife.com/join.php" class="menutext">Register</a><img src="images/spacer.gif" width="10" height="1" alt="">
 <a href="http://www.tricklife.com/members.php" class="menutext">Members</a>     </td> 
@@ -198,23 +201,23 @@ function MM_preloadImages() { //v3.0
   <td colspan="4"><img src="http://www.tricklife.com/images/spacer.gif" width="1" height="5" alt=""></td>
  </tr>
  <tr>
+        <td colspan="4">
+        <script type="text/javascript"><!--
+google_ad_client = "pub-3157349503638453";
+/* 728x90, created 12/19/08 */
+google_ad_slot = "2712893786";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+        </td>
+       </tr>
+ <tr>
   <td colspan="4" valign="top">
    <table cellpadding="0" cellspacing="0" border="0">
     <tbody><tr>
-    <td colspan="2">
-    <div style="margin-bottom:2px;text-align:center;">
-    <script type="text/javascript">
-google_ad_client = "pub-3157349503638453";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_type = "text_image";
-google_color_border = "FFFFFF";
-google_color_bg = "ffffff";
-google_color_link = "0000FF";
-google_color_text = "000000";
-google_color_url = "008000";
-</script><script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script></div></td></tr><tr>
      <td valign="top"><img src="http://www.tricklife.com/images/leftshadow.jpg"></td>
      <td rowspan="2" width="100%" valign="top">
       <table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -248,7 +251,7 @@ Information gathered in user profiles, including e-mail addresses, is NEVER disc
 This Privacy Policy may change at any time without notice.
 
 
-  </td> 
+  </td>
  </tr>
 </tbody></table>
         </td>
@@ -277,17 +280,15 @@ Copyright © 2007 TrickLife.com
 
 
 </center>
-
-        <script type="text/javascript">
+<script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
 try {
-var pageTracker = _gat._getTracker("UA-801743-14");
+var pageTracker = _gat._getTracker("UA-2487332-5");
 pageTracker._trackPageview();
 } catch(err) {}</script>
-      
 
 
 
