--- a/s/su/sum/summitcreditunion.com.html
+++ b/s/su/sum/summitcreditunion.com.html
@@ -1,11 +1,12 @@
-<!--The following is the downloaded HTML source of the summitcreditunion.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217113211id_/http%3A//www.summitcreditunion.com/summit.php%3Fpage%3D109) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the summitcreditunion.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616204022id_/http%3A//www.summitcreditunion.com/summit.php%3Fpage%3D109) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Summit Credit Union - Do More. Start Here.</title>
 <meta http-equiv="Content-Type" content="text/html;">
 <meta name="description" content="Summit Credit Union, Madison WI. We provide a full range of personal, financial services for people and small businesses in south central Wisconsin. Do more. Start here!">
 <meta name="keywords" content="Summit Credit Union, Summit CU, SCU, Madison WI, Madison, Madison Wisconsin, American Parkway, Baraboo, Beaver Dam, Call Center, City Station, Downtown, Fitchburg, Hill Farms, Lake Mills, Old Sauk, Sun Prairie, Westport, credit union, banking, online banking, bank, savings, checking, business services, business, loans, loan, lending, credit, money market, certificate, saving, savings, working capital, investment services, investments, home loan, mortgage loan, mortgage, home equity, VISA, credit card">
+
 <script src="/scripts/global.js" type="text/javascript"></script>
 <script src="/scripts/boxover.js" type="text/javascript"></script>
 <script src="/scripts/customer_service_isopen.js" type="text/javascript"></script>
@@ -22,7 +23,7 @@
 
 .feature_bg {
 	font: 11px Verdana, Arial, Helvetica, sans-serif;
-	background: #FEE7AC url(../media/img/head_feature_sunrise_sm.jpg) no-repeat;
+	background: #FFF url(../media/img/head_homepage108.jpg) no-repeat top;
 	height: 108px;
 }
 
@@ -32,38 +33,25 @@
 	padding-top: 12px;
 	padding-right: 18px;
 	float: right;
-	color: #000000;
+	color: #000;
 	overflow: hidden;
 }
 
 .feature_title {
-	font: bold 11px Georgia, "Times New Roman", Times, serif;
-	color: #FEE7AC;
+
 }
 
-.section_title{
-	float: right;
-	clear: both;
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 29px;
-	font-weight: normal;
-	color: #FDE7AE;
-	padding-right:10px;
-	padding-top: 3px;
-	letter-spacing: -1px;
-	
-}
+
 -->
-</style><link rel="STYLESHEET" type="text/css" href="../../admin/inc_nbs/nbs.css">
+</style>
 </head>
 <body onload="simplePreload('/img/mainnav_bg_nav1_over.jpg', '/img/mainnav_bg_nav2_over.jpg', '/img/mainnav_bg_nav3_over.jpg', '/img/mainnav_bg_nav4_over.jpg', '/img/mainnav_bg_nav5_over.jpg');">
 <div align="center">
 <div class="site_wrapper">
 
-<!--htdig_noindex-->
 <table class="site_header" border="0" align="center" cellpadding="0" cellspacing="0">
     <tbody><tr>
-        <td width="313" class="site_header_left"><img src="../img/header_logo.gif" width="313" height="77"></td>
+        <td width="313" class="site_header_left"><img src="../img/header_logo.gif" width="310" height="77"></td>
         <td valign="bottom" class="site_header_right">
             <!-- BEGIN table containing search and topnav -->
             <table width="447" border="0" cellspacing="0" cellpadding="0">
@@ -109,12 +97,7 @@
             </tbody></table></td>
     </tr>
 <tr><td colspan="2" valign="top" class="feature_bg" id="hdr_feature"><div align="right" class="feature_box"><span class="feature_title">Do More.</span><br>Invest more in life. See more return. Roast more marshmallows. Celebrate more birthdays. Give more back. <strong>Start here.</strong></div><div align="right" class="section_title">Privacy &amp; Security</div></td></tr>
-
-
-                    </tbody></table>
-
-<!--/htdig_noindex-->
-
+</tbody></table>
 
 <!-- end header / begin body -->
 
@@ -133,6 +116,13 @@
 							<td class="subnav_wrapper"><br>
 								<table class="site_subnav_tbl" border="0" align="center" cellpadding="0" cellspacing="0">
 								<!-- begin subnav loop --><tbody><tr>
+		<td width="12"></td>
+		<td colspan="3"><a href="/media/doc/privacypolicy09.pdf" class="subnav1">Privacy Policy 2009 (pdf)</a></td>
+	</tr>
+
+										<tr>
+		<td colspan="4"><img src="/img/shim.gif" width="1" height="8"></td>
+	</tr><tr>
 		<td width="12"></td>
 		<td colspan="3"><a href="/summit.php?page=172" class="subnav1">Privacy Policy FAQ</a></td>
 	</tr>
@@ -178,7 +168,7 @@
         <td class="site_int_content" valign="top">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody><tr>
-                    <td class="pagetitle_0"><span style="float: left;">Privacy &amp; Security</span></td>
+                    <td class="pagetitle_0"><span style="float: left;">Privacy &amp; Security</span><div class="email_friend_link"></div></td>
                 </tr>
                 <tr>
                     <td><img src="../img/shim.gif" width="1" height="6"></td>
@@ -237,7 +227,7 @@
     </tr>
     <tr>
         <td colspan="3">&nbsp;</td>
-        </tr>
+    </tr>
     <tr>
         <td colspan="3">
 		  <!-- begin footer table -->
@@ -247,11 +237,11 @@
                 </tr>
                 <tr>
                     <td width="500" valign="top" class="foot_txt">
-<a href="/summit.php?page=162" class="topnav">Site Map</a> | <a href="/summit.php?page=109" class="topnav">Privacy &amp; Security</a> | <a href="http://webapps.ncua.gov/ins/aaFront/F02.asp" class="topnav">NCUA Insurance Estimator</a>
+<a href="/summit.php?page=162" class="topnav">Site Map</a> | <a href="/summit.php?page=109" class="topnav">Privacy &amp; Security</a> | <a href="http://www.ncua.gov/ShareInsurance/InsuranceEstimator.htm" class="topnav">NCUA Insurance Estimator</a>
 <br>
                             <img src="../img/foot_logos.gif" width="132" height="43"> <br>
                     </td>
-                    <td align="right" valign="top" class="foot_txt">Copyright 2008 © Summit Credit Union<br>
+                    <td align="right" valign="top" class="foot_txt">Copyright 2009 © Summit Credit Union<br>
 P. O. Box 8046, Madison WI 53708-8046<br>
 Toll-free: (800) 236-5560<br>Local: (608) 243-5000<br>
                         All rights reserved.</td>
