--- a/4/4a/4ad/4adventure.com.html
+++ b/4/4a/4ad/4adventure.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 4adventure.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217102253id_/http%3A//www.worldsofdiscovery.com/worldsofdiscovery/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 4adventure.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616204738id_/http%3A//www.worldsofdiscovery.com/worldsofdiscovery/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -39,6 +39,20 @@ padding:25px 55px 25px 55px;
 </head>
 
 <body bgcolor="#FFFFFF">
+
+<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+	var pageTracker = _gat._getTracker("UA-6513444-1");
+	pageTracker._setDomainName("none");
+	pageTracker._setAllowLinker(true);
+	pageTracker._trackPageview();
+</script>
+
+
+
 <table width="701" border="0" align="center" cellpadding="0" cellspacing="0">
   <!-- fwtable fwsrc="images/Untitled" fwbase="7bec204_WOD_flat.jpg" fwstyle="Dreamweaver" fwdocid = "785745665" fwnested="0" -->
   <tbody><tr>
@@ -138,7 +152,7 @@ Thank you for visiting our site.
 	
 	<!-- SiteCatalyst code version: H.14.
 Copyright 1997-2008 Omniture, Inc. More info available at
-http://www.omniture.com -->
+http://www.omniture.com
 <script language="JavaScript" src="s_code.js"></script>
 <script language="JavaScript"><!--
 /* You may give each page an identifying name, server, and channel on
@@ -165,10 +179,10 @@ s.eVar3=""
 s.eVar4=""
 s.eVar5=""
 /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
-var s_code=s.t();if(s_code)document.write(s_code)//--></script>
+var s_code=s.t();if(s_code)document.write(s_code)</script>
 <script language="JavaScript"><!--
 if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
-//--></script><noscript><a href="http://www.omniture.com" title="Web Analytics"><img
+</script><noscript><a href="http://www.omniture.com" title="Web Analytics"><img
 src="http://budworldsofdiscovery.122.2O7.net/b/ss/budworldsofdiscovery/1/H.14--NS/0"
 height="1" width="1" border="0" alt="" /></a></noscript><!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: H.14. -->
