--- a/r/ru/rue/rue21.com.html
+++ b/r/ru/rue/rue21.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rue21.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217040435id_/http%3A//www.rue21.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rue21.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616205400id_/http%3A//www.rue21.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_Head1"><title>
 	
@@ -313,20 +313,28 @@ document.getElementById('TwirlyDoodle').style.visibility='hidden';
       <td colspan="4" width="850"><img alt="" src="/images/reskin/book_bottom.png" border="0" width="850" height="31"></td>
     </tr>
     <tr>
-      <td colspan="4" width="850"><span style="color:black;font-family:Arial;font-size:8pt;margin-left:530px">©2008 rue21. All rights reserved.</span></td>
+      <td colspan="4" width="850">
+      <div style="float: left;padding-left: 50px;">
+        <a href="http://www.facebook.com/pages/rue21/8754337404" target="_blank">Facebook</a>
+        |
+        <a href="http://www.myspace.com/myrue21" target="_blank">MySpace</a>
+      </div>
+      
+      <span style="color:black;font-family:Arial;font-size:8pt;margin-left:350px">©2009 rue21. All rights reserved.</span></td>
     </tr>
   </tbody></table>
 </div>
 
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3745915-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    var pageTracker = _gat._getTracker("UA-3745915-1");
+    pageTracker._initData();
+    pageTracker._trackPageview();
+    </script>
+
 
 
 </body></html>
