terrapinn.com (archived on 2009-06-16)
{
  "alexa_rank": 94720,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 5512,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.6,
  "homepage_snapshot_redirected_domain": "terrapinn.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090309113827id_/http://www.terrapinn.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090309113827id_/http%3A//terrapinn.com",
  "interval": "2009_A",
  "link_text": "privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "terrapinn.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616205538id_/http%3A//www.terrapinn.com/Legal.aspx%3FL%3DP",
  "policy_title": "Terrapinn - Legal",
  "policy_url": "terrapinn.com/Legal.aspx?L=P",
  "sha1": "890fbef3ef5f24504b07df327de26df9dd747597",
  "simhash": 2619777691909666447,
  "simhash_updated": false,
  "site_hostname": "terrapinn.com",
  "site_url": "http://terrapinn.com",
  "smog": 14.93,
  "strict_updated": false,
  "timestamp": "20090616205538",
  "word_count": 898,
  "year": 2009
}

--- a/t/te/ter/terrapinn.com.html
+++ b/t/te/ter/terrapinn.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the terrapinn.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216170857id_/http%3A//www.terrapinn.com/Legal.aspx%3FL%3DP) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the terrapinn.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616205538id_/http%3A//www.terrapinn.com/Legal.aspx%3FL%3DP) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
     <title>Terrapinn - Legal</title>
@@ -51,7 +51,7 @@
 			<a href="/story.aspx?F=0" title="Stories and Movies"><img src="/img/btnMovies.jpg" border="0" height="16" width="125" alt="stories and Movies"></a>
 		</div>
 		
-		<div id="_390503108_spMenu"><div class="hdWrapper"><div class="hdMain1"><a href="gateway.aspx" title="home">home</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="aboutus.aspx" title="about us">about us</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="terrapinnevents.aspx" title="events">events</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="training.aspx" title="training">training</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="publications.aspx" title="publications">publications</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="careers.aspx" title="careers">careers</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="story.aspx?f=0" title="stories and movies">stories and movies</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="story.aspx?f=1" title="press releases">press releases</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="csr.aspx" title="social responsibility">social responsibility</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="contactus.aspx" title="contact us">contact us</a></div></div></div>
+		<div id="_381504392_spMenu"><div class="hdWrapper"><div class="hdMain1"><a href="gateway.aspx" title="home">home</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="aboutus.aspx" title="about us">about us</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="terrapinnevents.aspx" title="events">events</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="training.aspx" title="training">training</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="publications.aspx" title="publications">publications</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="careers.aspx" title="careers">careers</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="story.aspx?f=0" title="stories and movies">stories and movies</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="story.aspx?f=1" title="press releases">press releases</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="csr.aspx" title="social responsibility">social responsibility</a></div></div><div class="hdWrapper"><div class="hdMain1"><a href="contactus.aspx" title="contact us">contact us</a></div></div></div>
 			
 	</div>
 </div>
@@ -90,7 +90,7 @@
 <p>&nbsp;If you have any questions or concerns about Terrapinn's use of your personal  information, please email Klaudia Gowero at <a href="mailto:compliance@terrapinn.com"><font color="#f99b55">compliance@terrapinn.com</font></a> or write to her at Terrapinn  Limited, Wren House, 43 Hatton Garden, London EC1N 8EL.</p></span>	
 	
 </div>
-</td></tr></tbody></table></td><td><table id="tbRight" cellpadding="0" width="200"><tbody><tr><td id="tdRight"><div id="RightQuote1_QuoteHolder" style="WIDTH:125px"><div class="RightQuoteWrapper"><div><a href="/management.aspx?ID=1" title="Tony Steel, Chairman, Terrapinn" target="_top" class="MainLink"><img src="/img/quotes/brain-1.jpg"></a><div class="divRightCust">“using your brain in ways it can never be used behind a desk”</div><div class="divRightAuthor">Tony Steel, Chairman, Terrapinn</div></div></div><div class="RightQuoteWrapper"><div><img src="/Img/quotes/lib/quotes/Event%201.jpg"><div class="divRightCust">“Singapore’s only ‘must do’ real estate conference”</div><div class="divRightAuthor">UBS Investment Bank, Singapore</div></div></div></div>
+</td></tr></tbody></table></td><td><table id="tbRight" cellpadding="0" width="200"><tbody><tr><td id="tdRight"><div id="RightQuote1_QuoteHolder" style="WIDTH:125px"><div class="RightQuoteWrapper"><div><img src="/Img/quotes/lib/quotes/Event%2026.jpg"><div class="divRightCust">“very much to the issues that we’re facing and some very spirited debate”</div><div class="divRightAuthor">Genesis Energy, Australia</div></div></div><div class="RightQuoteWrapper"><div><a href="/management.aspx?ID=1" title="Tony Steel, Chairman, Terrapinn" target="_top" class="MainLink"><img src="/img/quotes/brain-1.jpg"></a><div class="divRightCust">“using your brain in ways it can never be used behind a desk”</div><div class="divRightAuthor">Tony Steel, Chairman, Terrapinn</div></div></div></div>
 </td></tr></tbody></table></td></tr></tbody></table></td></tr><tr><td valign="top"><table id="tbBottom" cellpadding="0"><tbody><tr><td id="tdBottom">
 
 <!-- QUOTES -->
@@ -101,45 +101,45 @@
 <div id="BaseQuote1_QuoteHolder" style="WIDTH:970px"><div class="divBotDivs"><table class="tbBaseQuoteTable" cellpadding="0">
 <tbody><tr>
 <td rowspan="2" class="">
-<a href="http://www.terrapinn.com/2008/antibody" target="_blank"><img src="/Img/quotes/lib\quotes/Event%2042.jpg" align="left"></a>
+<a href="http://www.terrapinn.com/2008/miningme" target="_blank"><img src="/Img/quotes/lib\quotes/Event%2024.jpg" align="left"></a>
 </td>
 <td class="BaseQuote">
-“Enjoyed the meeting”
+“The conference was very well organised with very interesting speaker presentations”
 </td>
 </tr>
 <tr>
 <td class="BaseAuthor">
-Emmanuelle Coutanceau, Assocaite, Credit Agricole Private Equity
+Craig Tuckman, Managing Director, Merrill Lynch Commodities 
 </td>
 </tr>
 </tbody></table>
 </div><div class="divBotDivs"><table class="tbBaseQuoteTable" cellpadding="0">
 <tbody><tr>
 <td rowspan="2" class="">
-<a href="http://www.terrapinn.com/2008/cee_rail" target="_blank"><img src="/Img/quotes/lib\quotes/Event%209.jpg" align="left"></a>
+<a href="http://www.terrapinn.com/2008/hta" target="_blank"><img src="/Img/quotes/lib\quotes/Event%206.jpg" align="left"></a>
 </td>
 <td class="BaseQuote">
-“Professionally organized, with relevant speakers”
+“Good coverage of P&amp;R and M&amp;A topics”
 </td>
 </tr>
 <tr>
 <td class="BaseAuthor">
-Nikola Dimitrovski, CIO, Macedonia Railway Infrastructure
+Said of the 2008 Pharmaceutical Pricing &amp; Market Access Summit
 </td>
 </tr>
 </tbody></table>
 </div><div class="divBotDivs"><table class="tbBaseQuoteTable" cellpadding="0">
 <tbody><tr>
 <td rowspan="2" class="">
-<a href="http://www.terrapinn.com/2008/aas_au" target="_blank"><img src="/Img/quotes/lib\quotes/Event%2022.jpg" align="left"></a>
+<a href="http://www.terrapinn.com/2008/outsourceusa" target="_blank"><img src="/Img/quotes/lib\quotes/Event%2022.jpg" align="left"></a>
 </td>
 <td class="BaseQuote">
-“Very worthwhile Good depth and a high level of presentations &amp; discussions”
+“Good calibre of speakers”
 </td>
 </tr>
 <tr>
 <td class="BaseAuthor">
-Asset Allocation Summit 2007 - Past delegate
+David Bloom, Solicitor, Roiter Zucker
 </td>
 </tr>
 </tbody></table>
