swing4ireland.com (archived on 2009-06-16)
{
  "alexa_rank": 99526,
  "analysis_subcorpus": true,
  "categories": "adult;business",
  "char_count": 2365,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.55,
  "homepage_snapshot_redirected_domain": "swing4ireland.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090317071334id_/http://www.swing4ireland.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090317071334id_/http%3A//swing4ireland.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "swing4ireland.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616205640id_/http%3A//www.swing4ireland.com/privacy-policy.html",
  "policy_title": "Privacy Policy - Free Irish swinging site, meet swingers today!",
  "policy_url": "swing4ireland.com/privacy-policy.html",
  "sha1": "8c7736fe73cf9db3bfe3f850969776453a6161ea",
  "simhash": 10604041165942424496,
  "simhash_updated": false,
  "site_hostname": "swing4ireland.com",
  "site_url": "http://swing4ireland.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090616205640",
  "word_count": 374,
  "year": 2009
}

--- a/s/sw/swi/swing4ireland.com.html
+++ b/s/sw/swi/swing4ireland.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the swing4ireland.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216171307id_/http%3A//www.swing4ireland.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the swing4ireland.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616205640id_/http%3A//www.swing4ireland.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
         <title>Privacy Policy - Free Irish swinging site, meet swingers today!</title>
@@ -69,6 +69,7 @@
     <li><a href="http://www.swing4ireland.com/groups.html">Groups - <span style="color:yellow">New</span></a></li>
     <li><a href="http://www.swing4ireland.com/swinger-stories.html">Stories - <span style="color:yellow">New</span></a></li>
     <li><a href="http://www.swing4ireland.com/guide-to-swinging.html">Guide to Swinging</a></li>
+    <li><a href="http://www.swing4ireland.com/showthread-8450.html">Sexual Health</a></li>
     <li></li>
 </ul>
 <img src="/images/leftnav/block-footer.jpg" alt=""><br>
@@ -87,18 +88,18 @@
 <img src="/images/leftnav/block-footer.jpg" alt=""><br><img src="/images/leftnav/new-members.jpg" class="menuheader" alt="New Members">
 <h3>Couples</h3>
 <ul class="userlist">
-<li><a href="http://dromore242.swing4ireland.com">dromore242</a></li><li><a href="http://funbicup.swing4ireland.com">funbicup</a></li><li><a href="http://austinanddee.swing4ireland.com">austinanddee</a></li><li><a href="http://ArTnHalo.swing4ireland.com">ArTnHalo</a></li><li><a href="http://johnnmary.swing4ireland.com">johnnmary</a></li><li><a href="http://tropez100.swing4ireland.com">tropez100</a></li><li><a href="http://wappo73.swing4ireland.com">wappo73</a></li><li><a href="http://schnaz06.swing4ireland.com">schnaz06</a></li><li><a href="http://hugeass.swing4ireland.com">hugeass</a></li><li><a href="http://yungcouple20.swing4ireland.com">yungcouple20</a></li></ul>
+<li><a href="http://Badgerslappy.swing4ireland.com">Badgerslappy</a></li><li><a href="http://ted3579.swing4ireland.com">ted3579</a></li><li><a href="http://couple-4fun.swing4ireland.com">couple-4fun</a></li><li><a href="http://vonnyoc.swing4ireland.com">vonnyoc</a></li><li><a href="http://lookin4fun52.swing4ireland.com">lookin4fun52</a></li><li><a href="http://BabyK.swing4ireland.com">BabyK</a></li><li><a href="http://cuckoldluv.swing4ireland.com">cuckoldluv</a></li><li><a href="http://Loversunite.swing4ireland.com">Loversunite</a></li><li><a href="http://justforfun1.swing4ireland.com">justforfun1</a></li><li><a href="http://newcple69.swing4ireland.com">newcple69</a></li></ul>
 <h3>Females</h3>
 <ul class="userlist">
-<li><a href="http://princessss.swing4ireland.com">princessss</a></li><li><a href="http://KKkitten.swing4ireland.com">KKkitten</a></li><li><a href="http://luvgoodtime.swing4ireland.com">luvgoodtime</a></li><li><a href="http://Lainey.swing4ireland.com">Lainey</a></li><li><a href="http://hotkelly2008.swing4ireland.com">hotkelly2008</a></li><li><a href="http://numan123.swing4ireland.com">numan123</a></li><li><a href="http://lovedrop.swing4ireland.com">lovedrop</a></li><li><a href="http://laurababe7.swing4ireland.com">laurababe7</a></li><li><a href="http://Mariam-candy.swing4ireland.com">Mariam-candy</a></li><li><a href="http://yummybella.swing4ireland.com">yummybella</a></li></ul>
+<li><a href="http://dublinbbw.swing4ireland.com">dublinbbw</a></li><li><a href="http://shavinasian.swing4ireland.com">shavinasian</a></li><li><a href="http://PatriciaDub.swing4ireland.com">PatriciaDub</a></li><li><a href="http://cannec.swing4ireland.com">cannec</a></li><li><a href="http://kim321.swing4ireland.com">kim321</a></li><li><a href="http://twirlgirl.swing4ireland.com">twirlgirl</a></li><li><a href="http://twirlgirl.swing4ireland.com">twirlgirl</a></li><li><a href="http://chezdee.swing4ireland.com">chezdee</a></li><li><a href="http://wetwetwet08.swing4ireland.com">wetwetwet08</a></li><li><a href="http://hornylady.swing4ireland.com">hornylady</a></li></ul>
 <h3>Males</h3>
 <ul class="userlist">
-<li><a href="http://madmatt.swing4ireland.com">madmatt</a></li><li><a href="http://stannymark.swing4ireland.com">stannymark</a></li><li><a href="http://shagmmmm.swing4ireland.com">shagmmmm</a></li><li><a href="http://samdublin.swing4ireland.com">samdublin</a></li><li><a href="http://large1.swing4ireland.com">large1</a></li><li><a href="http://bigblueman.swing4ireland.com">bigblueman</a></li><li><a href="http://UCD-Guy.swing4ireland.com">UCD-Guy</a></li><li><a href="http://fab310.swing4ireland.com">fab310</a></li><li><a href="http://Waterboy100.swing4ireland.com">Waterboy100</a></li><li><a href="http://hornyboy1.swing4ireland.com">hornyboy1</a></li></ul>
+<li><a href="http://del123.swing4ireland.com">del123</a></li><li><a href="http://fitgalwayguy.swing4ireland.com">fitgalwayguy</a></li><li><a href="http://rfur-rimmer.swing4ireland.com">rfur-rimmer</a></li><li><a href="http://jared.swing4ireland.com">jared</a></li><li><a href="http://bazza38.swing4ireland.com">bazza38</a></li><li><a href="http://newbyboy.swing4ireland.com">newbyboy</a></li><li><a href="http://kjmhorny.swing4ireland.com">kjmhorny</a></li><li><a href="http://cumangetit.swing4ireland.com">cumangetit</a></li><li><a href="http://raginghorn.swing4ireland.com">raginghorn</a></li><li><a href="http://cucolin.swing4ireland.com">cucolin</a></li></ul>
 <img src="/images/leftnav/block-footer.jpg" alt=""><br>
-<div id="membercount">Total Members: 42,593<br>
-New Today: <a href="http://www.swing4ireland.com/search.html?preset=2">46</a><br>
-Online Now: 741<br>
-Video Chatroom: <a href="http://www.swing4ireland.com/chat.html">147</a></div>
+<div id="membercount">Total Members: 51,724<br>
+New Today: <a href="http://www.swing4ireland.com/search.html?preset=2">53</a><br>
+Online Now: 1,256<br>
+Video Chatroom: <a href="http://www.swing4ireland.com/chat.html">287</a></div>
             </div><!--#header-->
 <div id="content">
 	<div class="hr2"><h1>Privacy Policy</h1></div>
@@ -121,7 +122,7 @@ Video Chatroom: <a href="http://www.swing4ireland.com/chat.html">147</a></div>
                     <a href="http://www.swing4ireland.com/privacy-policy.html">Privacy Policy</a> |
                     <a href="http://www.swing4ireland.com/aup.html">AUP</a>
                 </div>
-                <span>Copyright © 2008 <a href="http://www.swing4ireland.com">swing4ireland.com</a></span>
+                <span>Copyright © 2009 <a href="http://www.swing4ireland.com">swing4ireland.com</a></span>
             </div>
         </div>
             
