enounce.com (archived on 2009-06-16)
{
  "alexa_rank": 74467,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 5624,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.16,
  "homepage_snapshot_redirected_domain": "enounce.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090402231119id_/http://www.enounce.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090402231119id_/http%3A//enounce.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "enounce.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616211119id_/http%3A//www.enounce.com/privacy.php",
  "policy_title": "Privacy Policy : Time Scale Modification of Audio - Enounce Incorporated",
  "policy_url": "enounce.com/privacy.php",
  "sha1": "51365581d199072a73a6de453d0b4e63ba3e8195",
  "simhash": 628904322451063101,
  "simhash_updated": false,
  "site_hostname": "enounce.com",
  "site_url": "http://enounce.com",
  "smog": 14.93,
  "strict_updated": false,
  "timestamp": "20090616211119",
  "word_count": 902,
  "year": 2009
}

--- a/e/en/eno/enounce.com.html
+++ b/e/en/eno/enounce.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the enounce.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011915id_/http%3A//www.enounce.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the enounce.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616211119id_/http%3A//www.enounce.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
-<title>Privacy Policy : Time Scale Modification of Audio - Enounce Incorproated</title>
+<title>Privacy Policy : Time Scale Modification of Audio - Enounce Incorporated</title>
 <meta name="description" content="Speed up and slow down the speaking rate of audio and video without affecting pitch or comprehension.">
 <meta name="keywords" content="Enounce, 2xAV, rate, RealPlayer, Real Player, Windows Media Player, WMP, RealPlayer Plug-In, Windows Media Player Plug-In, plug-in, plugin, Patented Signal Processing, natural sounding audio,time-scale modification, tsm, time-stretch, variable speed playback,slow motion, accessibility, patented, watch, listen, media,speed up, slow down, speaking rate, audio, video, pitch, comprehension">
 
@@ -57,7 +57,7 @@
   <tbody><tr>
     <td width="100%" colspan="2"><table border="0" cellspacing="0" cellpadding="0" width="100%">
       <tbody><tr>
-        <td valign="top"><p align="left"><img src="/images/myspeed_35.png" alt="2xAV Plug-In" width="35" height="35"><a href="/"><img src="/images/logosmn.gif" alt="Enounce" border="0" width="163" height="35"></a></p></td>
+        <td valign="top"><p align="left"><img src="/images/myspeed_35_rg.png" alt="2xAV Plug-In" width="35" height="35"><a href="/"><img src="/images/logosmn.gif" alt="Enounce" border="0" width="163" height="35"></a></p></td>
         <td align="right" valign="bottom"><a href="/support.php"><img src="/images/btnsupport.gif" alt="Support" border="0" width="56" height="18"></a> <a href="/company.php"><img src="/images/btnabout.gif" alt="About Enounce" border="0" width="97" height="18"></a> <a href="/contact.php"><img src="/images/btncontact.gif" alt="Contact Us" border="0" width="73" height="18"></a></td>
       </tr>
       <tr>
@@ -225,16 +225,10 @@
     <a href="/support.php">Support</a></td>
 
 
-    <td align="right" class="copyright">© 1998-2008 Enounce, Incorporated</td>
+    <td align="right" class="copyright">© 1998-2009 Enounce, Incorporated</td>
   </tr>
 </tbody></table>
 </center></div>
-<table>
-	<tbody><tr>
-	<td>
-		  <p align="left"></p><ol></ol>	</td>
-	</tr>
-</tbody></table>
 
 
 <script type="text/javascript">
@@ -244,7 +238,9 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 <script type="text/javascript">
 try {
 var pageTracker = _gat._getTracker("UA-992837-3");
+pageTracker._setDomainName(".enounce.com")
 pageTracker._trackPageview();
 } catch(err) {}</script>
+
 
 </body></html>
