--- a/b/bi/bid/bid4assets.com.html
+++ b/b/bi/bid/bid4assets.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bid4assets.com privacy policy that was archived on 2008-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081219125637id_/http%3A//www.bid4assets.com/Help/index.cfm%3FfuseAction%3DprivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bid4assets.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616211129id_/http%3A//www.bid4assets.com/Help/index.cfm%3FfuseAction%3DprivacyPolicy) for the most accurate reproduction.-->
 
 <html><head><style type="text/css"> 
 	#wrapper 
@@ -10,7 +10,7 @@
 			} 
 </style>
 
-<base href="http://www.bid4assets.com/help/"> 
+<base href="http://www.bid4assets.com/Help/"> 
 		</head><body bgcolor="FFFFFF" leftmargin="0" topmargin="0" rightmargin="0" marginheight="0" marginwidth="0" link="000000" vlink="000000" alink="000000"><div id="wrapper">
     	
 
@@ -41,7 +41,7 @@
 	
 	
 
-
+<script language="Javascript" type="text/javascript" src="/live_visitor.js"></script>
 
 
 
@@ -94,16 +94,16 @@
 		<td><img src="/Images/Home/TopHeader/topheader_09.gif" width="192" height="19" alt=""></td>
 		<td>
 			<img src="/Images/Home/TopHeader/top_nav_sec2_03.gif" width="50" height="19" alt=""></td>
-		<td width="231" height="19" align="center" bgcolor="#FF9900"><a href="https://secure.bid4assets.com/Register/index.cfm?fuseaction=subscribe"><img src="/Images/Home/TopHeader/top_nav_sec2_04.gif" width="231" height="19" border="0"></a></td>
-		<td width="227" height="19" align="center" bgcolor="#FF9900"><a href="http://www.bid4assets.com/storefront/index.cfm?fuseaction=USMS&amp;sfid=150"><img src="/Images/Home/TopHeader/top_nav_sec2_05.gif" width="227" height="19" border="0"></a></td>
+		<td width="231" height="19" align="center" bgcolor="#FF9900"><a href="http://www.bid4assets.com/NRhome2"><img src="/Images/Home/TopHeader/top_nav_sec2_04.gif" width="231" height="19" border="0"></a></td>
+		<td width="227" height="19" align="center" bgcolor="#FF9900"><a href="https://secure.bid4assets.com/Register/index.cfm?fuseaction=subscribe"><img src="/Images/Home/TopHeader/top_nav_sec2_05.gif" width="227" height="19" border="0"></a></td>
 	</tr>
 </tbody></table>
 
 <table id="Table_01" width="699" height="20" border="0" cellpadding="0" cellspacing="0" align="center">
   <tbody><tr>
     	    <td width="192" height="20" align="center"><img src="/Images/Home/TopHeader/top_nav_sec2_08.gif" width="192" height="20" hspace="0" border="0"></td>
-			<td width="281" height="20" align="center" bgcolor="#FF9900"><a href="https://secure.bid4assets.com/Register/index.cfm?fuseaction=subscribe"><img src="/Images/Home/TopHeader/top_nav_sec2_09.gif" width="281" height="20" border="0"></a></td>
-			<td width="227" height="19" align="center" bgcolor="#FF9900"><a href="http://www.bid4assets.com/storefront/index.cfm?fuseaction=USMS&amp;sfid=150"><img src="/Images/Home/TopHeader/top_nav_sec2_10.gif" width="227" height="20" border="0"></a></td>
+			<td width="281" height="20" align="center" bgcolor="#FF9900"><a href="http://www.bid4assets.com/NRhome2"><img src="/Images/Home/TopHeader/top_nav_sec2_09.gif" width="281" height="20" border="0"></a></td>
+			<td width="227" height="19" align="center" bgcolor="#FF9900"><a href="https://secure.bid4assets.com/Register/index.cfm?fuseaction=subscribe"><img src="/Images/Home/TopHeader/top_nav_sec2_10.gif" width="227" height="20" border="0"></a></td>
   </tr>
 </tbody></table>
 <table width="699" border="0" cellpadding="0" cellspacing="0" align="center">
@@ -415,7 +415,8 @@ mso-bidi-font-family:Arial">Once you become a Bid4Assets subscriber, you will
 						<b>Need to Know</b><br>
 						<a href="http://www.bid4assets.com/Help/index.cfm?fuseAction=privacyPolicy">Privacy Policy</a><br>
 						<a href="http://www.bid4assets.com/Help/index.cfm?fuseAction=termsofservice">Terms of Service</a><br>
-						<a href="http://www.bid4assets.com/b4a/index.cfm?fuseAction=announcements">B4A Happenings</a>
+						<a href="http://www.bid4assets.com/b4a/index.cfm?fuseAction=announcements">B4A Happenings</a><br>
+						 
 					</td>
 					<td align="left" valign="top" class="b4amedArial" width="25%">
 						<b>For Sellers</b><br>
@@ -439,7 +440,7 @@ mso-bidi-font-family:Arial">Once you become a Bid4Assets subscriber, you will
 
 <table width="699" border="0" align="center" cellpadding="4" cellspacing="0">
 	<tbody><tr>
-		<td class="b4amedArial" align="center"><br>BID4ASSETS.COM®  and  BID4ASSETS®  are registered trademarks of Bid4Assets, Inc.<br>Copyright © 1999-2008 ALL RIGHTS RESERVED Bid4Assets®, Inc</td>
+		<td class="b4amedArial" align="center"><br>BID4ASSETS.COM®  and  BID4ASSETS®  are registered trademarks of Bid4Assets, Inc.<br>Copyright © 1999-2009 ALL RIGHTS RESERVED Bid4Assets®, Inc</td>
 	</tr>
 	<tr>
 		<td height="40">&nbsp;</td>
@@ -476,6 +477,9 @@ pageTracker._trackPageview();
 </script>
 
 
+<script src="http://static.getclicky.com/84415.js" type="text/javascript"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="http://static.getclicky.com/84415-db10.gif" /></p></noscript>
+<!-- 0 -->
 
 
 
