--- a/s/sp/spl/splashpagemaker.com.html
+++ b/s/sp/spl/splashpagemaker.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the splashpagemaker.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216074735id_/http%3A//splashpagemaker.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the splashpagemaker.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616215652id_/http%3A//www.splashpagemaker.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title></title>
